--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,5 +1,5 @@
 <!--pages/order/order.wxml-->
-<van-tabs swipeable>
+<van-tabs swipeable animated color="#09ab24" title-active-color="#09ab24" line-width="50px"> 
   <van-tab title="全部">
     <van-empty image="network" description="没有全部" />
   </van-tab>
