--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -39,6 +39,6 @@
   </view>
   <van-field value="{{}}" label="取票人" placeholder="姓名" input-class="input-class" />
   <van-field value="{{}}" label="手机号" placeholder="用于接收确认短信" />
-  <van-field value="{{}}" label="身份证号码" />
+  <van-field value="{{}}" label="身份证号码" border="{{false}}" />
 </view>
 <van-button type="primary" custom-class="custom">点击预订</van-button>
