--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,7 +1,7 @@
 <!--pages/game/game.wxml-->
 <view class="banner">
   <view class="tupbox">图片</view>
-  <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+  <swiper autoplay="{{true}}" interval="{{2000}}" duration="{{500}}">
     <block wx:for="{{background}}" wx:key="*this">
       <swiper-item>
         <image src="{{background[index]}}"></image>
@@ -18,11 +18,11 @@
         </view>
         <i class="iconfont icon-you-xi"></i>
       </view>
-      <view class="pingfengbox"  bindtap="toevaluate">
+      <view class="pingfengbox" bindtap="toevaluate">
         <view class="xingbox">
           <view class="xingxing">
             <view>
-              <van-rate size="16" color="rgb(253, 143, 0)"  readonly value="{{ 4 }}" count="4" bind:change="onChange" />
+              <van-rate size="16" color="rgb(253, 143, 0)" readonly value="{{ 4 }}" count="4" bind:change="onChange" />
             </view>
             <text class="text5">人气值</text>
           </view>
@@ -49,10 +49,11 @@
 <van-tabs sticky nav-class="gametabbox" ellipsis="{{false}}" line-width="0px" custom-class="custom-class">
   <van-tab title="全部">
     <block wx:for="{{title}}" wx:key="index">
-      <van-card price="免费" title="{{title[index]}}" thumb="cloud://cloud1-3gwhrat056f4c3bf.636c-cloud1-3gwhrat056f4c3bf-1306416878/image/luosifen.jpg" currency="">
-      <view slot="tag" class="tab">
-        <view>普通票</view>
-      </view>
+      <van-card price="免费" title="{{title[index]}}"
+        thumb="cloud://cloud1-3gwhrat056f4c3bf.636c-cloud1-3gwhrat056f4c3bf-1306416878/image/luosifen.jpg" currency="">
+        <view slot="tag" class="tab">
+          <view>普通票</view>
+        </view>
         <view slot="footer">
           <van-button size="mini" bindtap="todetails" data-value="{{title[index]}}">立即预定</van-button>
         </view>
@@ -69,9 +70,10 @@
   </van-tab>
   <van-tab title="普通票">
     <block wx:for="{{title}}" wx:key="index">
-      <van-card price="免费" title="{{title[index]}}" thumb="cloud://cloud1-3gwhrat056f4c3bf.636c-cloud1-3gwhrat056f4c3bf-1306416878/image/luosifen.jpg" currency="">
+      <van-card price="免费" title="{{title[index]}}"
+        thumb="cloud://cloud1-3gwhrat056f4c3bf.636c-cloud1-3gwhrat056f4c3bf-1306416878/image/luosifen.jpg" currency="">
         <view slot="footer">
-          <van-button size="mini" bindtap="todetails"  data-value="{{title[index]}}">立即预定</van-button>
+          <van-button size="mini" bindtap="todetails" data-value="{{title[index]}}">立即预定</van-button>
         </view>
         <view slot="desc" class="descbox">
           <text class="iconfont icon-gantanhao"></text>
@@ -85,3 +87,7 @@
     </block>
   </van-tab>
 </van-tabs>
+<block wx:if="{{show}}">
+<van-dialog use-slot title="未登录---是否登录" show="{{ show }}" show-cancel-button confirm-button-open-type="getUserInfo" bind:getuserinfo="getUserInfo" confirm-button-color="rgb(13, 160, 0)">
+</van-dialog>
+</block>
