--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -69,7 +69,7 @@ swiper-item image{
   position: relative;
   background-color: #fff !important;
 }
-.van-button{
+.van-button--mini {
   width: 70px !important;
   background-color: rgb(218, 102, 87) !important;
   border-radius: 3px !important;
