--- a/pages/orderdetails/orderdetails.wxml
+++ b/pages/orderdetails/orderdetails.wxml
@@ -7,5 +7,5 @@
     <text>订单号 : </text>
     <text>{{order.ordernumber}}</text>
   </view>
-  <van-button type="primary" bind:click="usenow">{{subText}}</van-button>
+  <van-button type="primary" bind:click="usenow">立即使用</van-button>
 </view>
