--- a/pages/details/details.wxss
+++ b/pages/details/details.wxss
@@ -111,3 +111,80 @@ page{
   align-items: center;
   font-weight: bold;
 }
+van-popup{
+  position: relative;
+}
+van-popup .van-icon:before{
+  position: fixed;
+  right: 10px;
+}
+van-popup .popupbox {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(230, 230, 230);
+}
+.popuptitlebox{
+  width: 100%;
+  height: 45rpx;
+  position: fixed;
+  background-color: #fff;
+  padding: 15px 0px;
+}
+.popupimg{
+  border: 2px solid #fff;
+  position: relative;
+  left: 30rpx;
+  top: -100rpx;
+}
+.popuptitlebox text{
+  position: absolute;
+  margin-left:80rpx;
+  font-weight: bold;
+}
+.contenttitle{
+  margin-top: 120rpx;
+  background-color: #fff;
+  padding: 20rpx 20rpx;
+  font-size: 22rpx;
+}
+.contenttitle text:first-child{
+  font-size: 30rpx;
+}
+.contenttitle .datebox{
+  margin: 15rpx 0;
+  width: 300rpx;
+  height: 50rpx;
+  line-height: 50rpx;
+  border-radius: 5rpx;
+  border: 1px solid rgb(0, 197, 43);
+  display: flex;
+}
+.contenttitle .datebox view{
+  width: 50rpx;
+  height: 50rpx;
+  text-align: center;
+  background-color: rgb(0, 197, 43);
+  color: #fff;
+  margin-right: 18rpx ;
+}
+.contenttitle text{
+  padding: 0 5px;
+  border-left:4px solid rgb(0, 170, 23) ;
+}
+.content{
+  margin-top: 1px;
+  background-color: #fff;
+}
+.content{
+  padding: 0 20rpx;
+  font-size: 24rpx;
+}
+.content text:first-child{
+  padding: 30rpx 0;
+  margin: 0 auto;
+  font-size: 40rpx;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
