--- a/pages/notice/notice.wxss
+++ b/pages/notice/notice.wxss
@@ -2,3 +2,25 @@
 page{
   background-color: rgb(242, 249, 255);
 }
+.van-cell .van-icon{
+  color: rgb(0, 185, 62) !important;
+  font-size: 40rpx;
+}
+.top,.buttom{
+  padding: 0 20rpx;
+  font-size: 24rpx;
+}
+.buttom{
+  padding-bottom:20rpx;
+  margin-bottom: 20rpx;
+}
+.buttom-notice{
+  margin-top:90rpx;
+}
+.buttom-notice-title{
+  font-size: 35rpx;
+  margin: 0 0 150rpx 50rpx;
+}
+.tilleb{
+  padding: 100rpx 0;
+}
