--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,6 +1,6 @@
 /* pages/order/order.wxss */
 page{
-  background-color: rgb(242, 249, 255);
+  background-color: rgba(243, 243, 243, 0.288);
 }
 .van-col--offset-5 {
   width: 40px !important;
