--- a/pages/security/security.wxml
+++ b/pages/security/security.wxml
@@ -1,11 +1,11 @@
 <!--pages/security/security.wxml-->
 <view class="box1">
-  <text>头像</text>
+  <text></text>
   <van-image class="portrait" round width="70" height="70" src="{{userInfo.avatarUrl}}" />
 </view>
 <view class="box2">
 <view>
-  <text>会员名</text>
+  <text>昵称</text>
   <text>{{userInfo.nickName}}</text>
 </view>
 
