--- a/pages/security/security.wxss
+++ b/pages/security/security.wxss
@@ -1,9 +1,9 @@
 /* pages/security/security.wxss */
 page{
-  background-color: rgb(242, 249, 255);
+  background-color: rgba(243, 243, 243, 0.288);
 }
 .box1{
-  height: 60px;
+  height: 50px;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
@@ -11,15 +11,17 @@ page{
   align-items: center;
 }
 .box2{
-  height: 60px;
+  display: flex;
+  align-items: center;
   background-color: #fff;
-  height: 100px;
+  border-top: 1px solid rgba(219, 219, 219, 0.342);
+  height: 60px;
 }
 .box2 view{
   width: 90%;
   margin: 0 auto;
   padding: 10px 0;
-  border-top: 1px solid rgb(219, 219, 219);
   display: flex;
   justify-content: space-between;
+  height: 60rpx;
 }
