--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,161 +1,7 @@
 <!--pages/game/game.wxml-->
-<view class="banner">
-  <view class="tupbox">图片</view>
-  <swiper autoplay="{{true}}" interval="{{2000}}" duration="{{500}}">
-    <block wx:for="{{background}}" wx:key="*this">
-    <view>
-      <swiper-item>
-        <image src="{{background[index]}}"></image>
-      </swiper-item>
-      <text>{{index}}</text>
+<view class="box">
+    <view class="box_title">
+        <i class="iconfont icon-bianjibiaoge_o"></i>
+        <text>小日记</text>
     </view>
-    </block>
-  </swiper>
-  <view class="textbox2">柳州科技馆</view>
-  <view class="bannerblock">
-    <view class="bannerblockt">
-      <view class="xuzhibox" bindtap="tonotice">
-        <view>
-          <text>游客须知</text>
-          <text>开放景点、景点简介</text>
-        </view>
-        <i class="iconfont icon-you-xi"></i>
-      </view>
-      <view class="pingfengbox" bindtap="toevaluate">
-        <view class="xingbox">
-          <view class="xingxing">
-            <view>
-              <van-rate size="16" color="rgb(253, 143, 0)" readonly value="{{ 4 }}" count="4"/>
-            </view>
-            <text class="text5">人气值</text>
-          </view>
-          <text>5分</text>
-        </view>
-        <i class="iconfont icon-you-xi"></i>
-      </view>
-    </view>
-    <view class="bannerblockb">
-      <view>
-        <text class="iconfont icon-dingwei" />
-        <text class="position">柳东新区文化广场</text>
-      </view>
-      <text class="periphery" bindtap="tomap">地图/周边</text>
-    </view>
-  </view>
 </view>
-<view class="ticketbox">
-  <view class="xbox1">
-    <i class="iconfont icon-huochepiao"></i>
-    <text>条件</text>
-  </view>
-</view>
-<van-tabs sticky nav-class="gametabbox" ellipsis="{{false}}" line-width="0px" custom-class="custom-class">
-  <van-tab title="全部">
-    <block wx:for="{{title}}" wx:key="index">
-      <van-card price="免费" title="{{title[index]}}" thumb="{{goodsUrl}}" currency="">
-        <view slot="tag" class="tab">
-          <view>普通票</view>
-        </view>
-        <view slot="footer">
-          <van-button size="mini" bindtap="todetails" data-value="{{title[index]}}">立即预定</van-button>
-        </view>
-        <view slot="desc" class="descbox">
-          <text class="iconfont icon-gantanhao"></text>
-          <text class="desc">一人一票(婴幼儿也需凭票入管)</text>
-        </view>
-        <view slot="price-top" class="price-top" bindtap="reserve">
-          <text>预定须知</text>
-          <i class="iconfont icon-you"></i>
-        </view>
-      </van-card>
-    </block>
-  </van-tab>
-  <van-tab title="普通票">
-    <block wx:for="{{title}}" wx:key="index">
-      <van-card price="免费" title="{{title[index]}}"
-        thumb="{{goodsUrl}}" currency="">
-        <view slot="footer">
-          <van-button size="mini" bindtap="todetails" data-value="{{title[index]}}">立即预定</van-button>
-        </view>
-        <view slot="desc" class="descbox">
-          <text class="iconfont icon-gantanhao"></text>
-          <text class="desc">一人一票(婴幼儿也需凭票入管)</text>
-        </view>
-        <view slot="price-top" class="price-top" bindtap="reserve">
-          <text>预定须知</text>
-          <i class="iconfont icon-you"></i>
-        </view>
-      </van-card>
-    </block>
-  </van-tab>
-</van-tabs>
-<block wx:if="{{show}}">
-  <van-dialog use-slot title="未登录---是否登录" show="{{ show }}" show-cancel-button confirm-button-open-type="getUserInfo"
-    bind:getuserinfo="getUserInfo" confirm-button-color="rgb(13, 160, 0)">
-  </van-dialog>
-</block>
-
-<van-popup position="bottom" show="{{ sheetShow }}" bind:close="onOverlay" closeable bind:click-overlay="onOverlay"
-  custom-style="height:70%;">
-  <view>
-    <view class="popuptitlebox">
-      <van-image image-class="popupimg" width="80" height="80" src="cloud://cloud1-9gor3jg0a7f2b30a.636c-cloud1-9gor3jg0a7f2b30a-1306416878/1111.jpg" />
-      <text>{{popupDate[0]}}号入馆门票</text>
-    </view>
-    <view class="popupbox">
-      <view class="contenttitle">
-        <text>预定时间</text>
-        <view class="datebox">
-          <view>√</view>
-          可预定{{popupDate[1]}}的票
-        </view>
-        <view>如需预定，您最晚需在游玩当天23：59前下单，请尽早预定。</view>
-      </view>
-      <view class="content" >
-        <text>柳州科技馆参观须知</text>
-        <text decode user-select>
-          一、开馆时间
-          2020年12月31日起正式对外开放:
-          &nbsp;&nbsp;(一)每周三至周日9:30至16:30开馆(16:00后停止入馆)。
-          &nbsp;&nbsp;(二)每周一、周二闭馆。
-          &nbsp;&nbsp;(三)国家法定节假日开馆时间另行安排。二、开放范围
-          一至四层为常设展厅,正常开放。其中天文气象展区、沉浸式超感体验区、柳州寻梦、科普剧场及空间相对密闭的展项在新冠肺炎疫情期间暂停开放。
-          三、参观方式
-          <text style="color:red;">1.本馆实行免费开放，预约参观，所有观众均须凭票入馆参观。1.2米以下儿童和免票办法规定的情况除外。</text >
-          2.在做好新冠肺炎疫情防控的基础上，适度接待公益性团体(非营利性社会组织或团体)，暂停全程及区域讲解、暂时取消展厅部分专题教育体验活动。团体（20人以上成团)参观须提前至少两个工作日向科技馆预约登记,预约方式见“柳州科技馆”微信公众号。周六周日、法定节假日、学生寒假暑假期间不接待团体预约参观。团体预约电话:0772-2612107，预约时间:周三至周日9:30-16:30。
-
-          四、门票预约流程
-          (一)个人观众通过关注“柳州科技馆”微信公众号，点击右下方“享·服务”，选择“网上预约”，进行门票预约。团体参观通过关注“柳州科技馆”微信公众号，点击右下方“享·服务”，选择“团体预约”，进行门票预约。
-          (二)每日16:00前可预约当日参观门票，16:00后可预约次日参观门票。新冠肺炎疫情期间每日限票1500张。
-          (三）为避免人群聚集,暂不提供现场预约或取票服务。
-          <text style="color:red;">(四)网上预约门票时须填报身份证号码进行实名登记，每张身份证最多可同时预约四张门票,持票人可在当日反复使用。</text>
-          五、验票参观流程
-          预约门票成功后将生成电子二维码（可通过门票预约系统中“订单”选项提取该二维码），入馆参观时须凭电子二维码通过闸机扫码入馆。
-          六、每日观众接待量
-          在新冠肺炎疫情防控期间，为避免人员过于密集和减少交叉感染风险，将实行参观人流管控。即常设展厅每日最大接待量1500人，最大瞬时接待量600人。后期视新冠肺炎疫情防控情况对人流限制动态进行调整将另行通知。
-          七、入馆参观须知及注意事项
-          <text style="color:red;">(一)持票人可在当日反复进出常设展厅，但需在二楼验票处加盖印章。</text>
-          (二)观众须全程佩戴口罩、携带本人身份证原件、出示健康码“绿码”、配合测量体温、安检后方可入馆。体温异常(≥37.3℃),或有咳嗽、呼吸急促等异常现象的观众谢绝入馆,并须配合工作人员按柳州市新冠肺炎疫情防控的相关要求进行处置。
-          (三)入馆观众请自觉排队并保持1.5米以上间隔，做好个人清洁和防护,文明参观。
-          (四)入馆观众应服从馆内工作人员的疏导管理，避免扎堆，有序参观。
-          (五)序厅服务台免费提供医用酒精、免洗洗手液、防疫宣传手册供观众使用。
-          (六)孕妇、儿童及70岁以上老人需要一名成年人持票陪同入馆。(七)场馆内各区域全面六个禁止:
-          <text style="color:red;">1.禁止在场馆内进食。
-            2.禁止携带宠物入馆。3.禁止吸烟(含电子烟)。
-            4.禁止在馆内追逐打闹、大声喧哗。
-            5.禁止在馆内随地吐痰、乱丢垃圾等杂物。6.禁止携带管制刀具、易燃易爆物品入馆。</text>
-          (七)相关信息变动更新,请关注“柳州科技馆”微信公众号。
-
-          八、免票办法
-          <text style="color:red;">70岁</text>
-          以上老年人本人、离休干部本人、残疾人士本人、烈士家属本人(含配偶及子女)，现役军人本人（可携带三位家属)，凭相关有效证件到服务前台登记，可享受免预约入馆参观。
-          九、交通信息
-          场馆地址:柳州市柳东新区文化广场A1区柳州科技馆。
-          交通∶乘坐快1路快速公交，到企业总部(柳东政务服务中心)站下车，步行800米到达。
-          咨询电话:0772-2612107
-          咨询时间:每周三至周日9:30～16:30。
-        </text>
-      </view>
-    </view>
-  </view>
-</van-popup>
