--- a/app.wxss
+++ b/app.wxss
@@ -1,71 +1,1 @@
-/**app.wxss**/
-@font-face {
-  font-family: "iconfont"; /* Project id 2649299 */
-  src: url('//at.alicdn.com/t/font_2649299_jftcl1w265.woff2?t=1625577158542') format('woff2'),
-       url('//at.alicdn.com/t/font_2649299_jftcl1w265.woff?t=1625577158542') format('woff'),
-       url('//at.alicdn.com/t/font_2649299_jftcl1w265.ttf?t=1625577158542') format('truetype');
-}
-
-.iconfont {
-  font-family: "iconfont" !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-chenggong:before {
-  content: "\e606";
-  font-size: 12px;
-  border: none;
-  margin-right: 5px;
-}
-
-.icon-gantanhao:before {
-  content: "\e685";
-  color: rgb(170, 170, 170);
-  font-size: 12px;
-  margin-right: 5px;
-}
-
-.icon-dingwei:before {
-  content: "\e6ad";
-  color: rgb(126, 126, 126);
-  font-size: 18px;
-}
-
-.icon-iconfontxingxing:before {
-  content: "\e6b0";
-  color: rgb(253, 143, 0);
-}
-
-.icon-you-xi:before {
-  content: "\e620";
-  font-size: 20px;
-}
-
-.icon-you:before {
-  content: "\e636";
-  color: rgb(187, 187, 187);
-  font-size: 13px;
-}
-
-.icon-huochepiao:before {
-  content: "\e652";
-  font-size: 20px;
-  color: rgb(0, 189, 0);
-  position: relative;
-  top: 2px;
-}
-
-.icon-gerendaiban:before {
-  content: "\e651";
-}
-
-.icon-dianhua:before {
-  content: "\e61b";
-}
-
-.icon-gantanhaoyuan:before {
-  content: "\e686";
-}
+@import 'styles/iconfont.wxss';
