--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,281 +1,21 @@
 /* pages/game/game.wxss */
 page{
-  background-color: rgba(243, 243, 243, 0.288);
+  background-color: rgba(243, 243, 243, 0.445);
 }
-swiper{
-  height: 220px;
+.box_title{
+    width: 150px;
+    height: 50px;
+    background-color: #fff;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 10px;
+    font-size: 15px;
+    margin: 20px auto;
+    color: rgb(235, 134, 134);
 }
-.banner{
-  position: relative;
-  height: 320px;
-  /* background-color: chartreuse; */
+.box_title text{
+  margin-left: 5px;
 }
-swiper-item{
-  background-color: antiquewhite;
-}
-swiper-item image{
-  width: 100%;
-}
-.tupbox{
-  width: 40px;
-  height: 20px;
-  border-radius: 20px;
-  background-color: rgb(0, 179, 15);
-  line-height: 20px;
-  text-align: center;
-  color: #fff;
-  font-size:11px;
-  position: absolute;
-  z-index: 99;
-  right: 10px;
-  top: 10px;
-}
-.textbox2{
-  position: absolute;
-  left: 5%;
-  bottom: 40%;
-  color: #fff;
-}
-.gametabbox{
-  float: left;
-}
-.bannerblock{
-  position: absolute;
-  width: 95%;
-  height: 100px;
-  background-color: #fff;
-  border-radius: 10px;
-  left: 50%;
-  bottom: -10%;
-  transform: translate(-50%,-50%);
-  box-shadow: 0px 0px 6px rgba(223, 223, 223, 0.055);
-}
-.ticketbox{
-  background-color: #fff;
-  padding: 10px;
-  bottom: 0;
-}
-.xbox1{
-  width: 100%;
-  /* background-color: aquamarine; */
-}
-.custom-class{
-  background-color: #fff ;
-}
-.van-card{
-  width: 95%;
-  margin: 0 auto;
-  border-top: 1px solid rgba(216, 216, 216, 0.664);
-  position: relative;
-  background-color: #fff !important;
-}
-.van-button--mini {
-  width: 70px !important;
-  background-color: rgb(218, 102, 87) !important;
-  border-radius: 3px !important;
-  color: #fff !important;
-}
-.van-card__price{
-  font-size: 1rpx !important;
-}
-.van-card__price-integer{
-  font-size: 26rpx !important;
-}
-.xbox1 text{
-  font-weight: bold;
-  margin-left: 10px;
-}
-.xbox2{
-  width: 95%;
-  height: 30px;
-  /* background-color: aquamarine; */
-}
-.van-card__price-integer{
-  font-size: 13px !important;
-}
-.xbox2 text{
-  margin-left: 20px;
-  font-size: 0.5rem;
-}
-.yuding{
-  z-index: 999;
-}
-.price-top{
-  position: absolute !important;
-  right: -5% !important;
-  top: 0 !important;
-}
-.bannerblockt{
-  width: 100%;
-  height: 60%;
-  /* background-color: aquamarine; */
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom: 1px solid rgba(219, 219, 219, 0.342);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.pingfengbox{
-  width: 50%;
-  height: 85%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.bannerblockb{
-  width: 90%;
-  height: 40%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  /* background-color: aqua; */
-}
-.bannerblockt .xuzhibox view{
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-.bannerblockt .xuzhibox{
-  width: 50%;
-  height: 85%;
-  border-right: 1px solid rgba(104, 104, 104, 0.342);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.bannerblockt .xuzhibox view{
-  width: 75%;
-  /* background-color: black; */
-  margin: 2% 0 0 10%;
-}
-.bannerblockt .xuzhibox view text:nth-child(1){
-  font-size: 15px;
-  margin-bottom: 5%;
-}
-.bannerblockt .xuzhibox view text:nth-child(2){
-  font-size: 10px;
-  color: rgb(105, 105, 105);
-}
-.xingbox{
-  width: 85%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  color: rgb(253, 143, 0);
-}
-.pingfengbox .text5{
-  font-size: 15px;
-  color: rgb(102, 102, 102);
-}
-.tab{
-  color: rgb(1, 168, 15);
-  width: 40px;
-  height: 18px;
-  text-align: center;
-  line-height: 18px;
-  font-size: 10px;
-  background-color: #fff;
-  border: 1px solid rgb(1, 168, 15);
-  position: relative;
-  bottom: 80px;
-  left: 15px;
-}
-.position,.periphery{
-  font-size: 15px;
-  margin-left: 10px;
-}
-.periphery{
-  color: rgb(0, 119, 255);
-}
-.van-card__img{
-  border-radius: 2px !important;
-}
-.desc{
-  font-size: 10px;
-}
-.descbox{
-  position: relative;
-  top: 5px;
-}
-van-popup{
-  position: relative;
-}
-van-popup .van-icon:before{
-  position: fixed;
-  right: 10px;
-}
-van-popup .popupbox {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(230, 230, 230);
-}
-.popuptitlebox{
-  width: 100%;
-  z-index: 999;
-  height: 45rpx;
-  position: fixed;
-  background-color: #fff;
-  padding: 15px 0px;
-}
-.popupimg{
-  border: 6rpx solid #fff;
-  position: relative;
-  left: 30rpx;
-  top: -100rpx;
-  border-radius: 150rpx;
-}
-.popuptitlebox text{
-  position: absolute;
-  margin-left:80rpx;
-  font-weight: bold;
-}
-.contenttitle{
-  margin-top: 120rpx;
-  background-color: #fff;
-  padding: 20rpx 20rpx;
-  font-size: 22rpx;
-}
-.contenttitle text:first-child{
-  font-size: 30rpx;
-}
-.contenttitle .datebox{
-  margin: 15rpx 0;
-  width: 300rpx;
-  height: 50rpx;
-  line-height: 50rpx;
-  border-radius: 5rpx;
-  border: 1px solid rgb(0, 197, 43);
-  display: flex;
-}
-.contenttitle .datebox view{
-  width: 50rpx;
-  height: 50rpx;
-  text-align: center;
-  background-color: rgb(0, 197, 43);
-  color: #fff;
-  margin-right: 18rpx ;
-}
-.contenttitle text{
-  padding: 0 5px;
-  border-left:4px solid rgb(0, 170, 23) ;
-}
-.content{
-  margin-top: 1px;
-  background-color: #fff;
-}
-.content{
-  padding: 0 20rpx;
-  font-size: 24rpx;
-}
-.content text:first-child{
-  padding: 30rpx 0;
-  margin: 0 auto;
-  font-size: 40rpx;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
+/* .box_title .icon-bianji{
+  font-size: 30px;
+} */
